--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,36 @@
+:root{
+    /* CSS HEX */
+--eerie-black: #1c1c1aff;
+--black-olive: #313328ff;
+--drab-dark-brown: #464935ff;
+--field-drab: #706442ff;
+--chamoisee: #9a7e4fff;
+--lion: #b69655ff;
+--gold-metallic: #d1ae5aff;
+--ecru: #d6be7bff;
+--vanilla: #dace9cff;
+}
 
 body{
     background: #fae1dd;
     margin: 0px;
     padding: 0px;
 }
+header picture{
+    position: absolute;
+    text-align: center;
+    left: -2vh;
+    top: -0.01vh;
+}
+header picture source{
+    position: absolute;
 
+
+}
+header picture img{
+    position: absolute;
+    
+}
 header{
     margin: 0px;
     display: flex;
@@ -21,16 +47,16 @@ header{
 header #best{
     z-index: 10;
     position: absolute;
-    color: #f9db5c;
-    -webkit-text-stroke: 1.5px #101720;
+    color: var(--gold-metallic);
+    -webkit-text-stroke: 3px var(--field-drab);
     font-family: 'Dancing Script', cursive;
     font-size: 100px;   
 }
 header .boda{
     margin: auto;
     z-index: 10;
-    color: #f9db5c;
-    -webkit-text-stroke: 1.5px #101720;
+    color: var(--gold-metallic);
+    -webkit-text-stroke: 3px var(--field-drab);
     font-family: "Merriweather", serif;
     font-weight: 700;
     font-style: italic;
@@ -46,7 +72,7 @@ header #back{
 
 #countdown{
     margin: 0px;
-    background-color: #B5DCDB;
+    background-color: var(--drab-dark-brown);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -56,6 +82,8 @@ header #back{
     font-weight: 400;
     font-style: italic;
     font-size: 40px;
+    position: relative;
+    color: var(--ecru);
 }
 
 #countdown .numeros{
@@ -65,7 +93,7 @@ header #back{
     font-size: 35px;
 }
 #countdown .numeros div{
-    background-color: #8C9DAD;
+    background-color: var(--eerie-black);
     width: 250px;
     height: 250px;
     border-radius: 50%;
@@ -75,36 +103,74 @@ header #back{
     margin-bottom: 0px;
 }
 #countdown .numeros div h1{
-    color: #E8E5DE;
+    color: var(--ecru);
     margin-top: 0px;
 }
 
 #nyn{
+    padding-top: 40px;
+    position: relative;
+    background-color: var(--chamoisee);
     text-align: center;
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: italic;
     font-size: 40px;
+    color: var(--eerie-black);
+    display: flex;
+    flex-direction: column;
+}
+
+#nyn h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: var(--ecru);
+}
+#nyn #tnyn{
+    width: 600px;
+    align-self: center;
+    background-color: var(--eerie-black);
+    border-radius: 40px;
 }
 #nyn #info{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
+#nyn #info .n{
+    background-color: var(--field-drab);
+    width: 250px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--vanilla);
+}
+#nyn #info .n #top{
+    margin-top: auto;
+}
+#nyn #info .n #bottom{
+    margin-bottom: auto;
+}
 #nyn #info .n p{
     margin: 0px;
+    
 }
 #nyn #info img{
     width: 400px;
     height: 400px;
 }
 #misa{
-    margin-left: 30px;
-    margin-right: 30px;
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 50px;
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: italic;
     font-size: 40px;
+    background-color: var(--lion);
 }
 #misa .tm{
     display: flex;
@@ -127,19 +193,19 @@ header #back{
 #misa .cm .cmt a{
     text-decoration: none;
     display: inline-block;
-    background-color: #101720;
+    background-color: var(--field-drab);
     padding: 13px 50px ;
     border: 1px solid var(--oro);
     border-radius: 25px;
-    color: var(--oro);
+    color: var(--vanilla);
     text-decoration: none;
     transition: 0.5s;
 }
 #misa .cm .cmt a:hover{
     font-size: 50px;
     transition: 0.5s;
-    background-color: var(--oro);
-    color: var(--dark);
+    background-color: var(--eerie-black);
+    color: var(--vanilla);
     box-shadow: 11px 13px 5px 1px rgba(3,12,36,0.87);
     -webkit-box-shadow: 11px 13px 5px 1px rgba(3,12,36,0.87);
     -moz-box-shadow: 11px 13px 5px 1px rgba(3,12,36,0.87);
@@ -153,12 +219,15 @@ header #back{
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 #fiesta{
-    margin-left: 30px;
-    margin-right: 30px;
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 50px;
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: italic;
     font-size: 40px;
+    background-color: var(--lion);
 }
 #fiesta .tf{
     display: flex;
@@ -181,19 +250,19 @@ header #back{
 #fiesta .cf .cft a{
     text-decoration: none;
     display: inline-block;
-    background-color: #101720;
+    background-color: var(--field-drab);
     padding: 13px 50px ;
     border: 1px solid var(--oro);
     border-radius: 25px;
-    color: var(--oro);
+    color: var(--vanilla);
     text-decoration: none;
     transition: 0.5s;
 }
 #fiesta .cf .cft a:hover{
     font-size: 50px;
     transition: 0.5s;
-    background-color: var(--oro);
-    color: var(--dark);
+    background-color: var(--eerie-black);
+    color: var(--vanilla);
     box-shadow: 11px 13px 5px 1px rgba(3,12,36,0.87);
     -webkit-box-shadow: 11px 13px 5px 1px rgba(3,12,36,0.87);
     -moz-box-shadow: 11px 13px 5px 1px rgba(3,12,36,0.87);
@@ -211,15 +280,15 @@ header #back{
     justify-content: center;
     margin-top: 0px;
     padding: 50px 0 0 0;
-    background: rgb(173,181,189);
-    background: linear-gradient(180deg, rgba(173,181,189,1) 33%, rgba(108,117,125,1) 66%, rgba(73,80,87,1) 100%);
+    background: rgb(182,150,85);
+background: linear-gradient(180deg, rgba(182,150,85,1) 22%, rgba(209,174,90,1) 53%, rgba(218,206,156,1) 81%);
 }
 .containeregalos{
     padding: 0;
     width: 900px;
     height: 90%;
     margin-bottom: 60px;
-    background-color: var(--dark);
+    background-color: var(--black-olive);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -230,6 +299,18 @@ header #back{
 }
 .containeregalos h1{
     font-size: 40px;
+    color: #fae1dd;
+    font-family: "Merriweather", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+.containeregalos p{
+    font-size: 20px;
+    color: #fae1dd;
+    text-align: center;
+    font-family: "Merriweather", serif;
+    font-weight: 400;
+    font-style: italic;
 }
 #confirmar{
     display: flex;
@@ -239,6 +320,8 @@ header #back{
     font-size: 40px;
     justify-content: space-evenly;
     text-align: center;
+    background-color: var(--vanilla);
+    margin-bottom: 0px;
 }
 #confirmar div a{
     text-decoration: none;
@@ -250,6 +333,7 @@ header #back{
     color: var(--oro);
     text-decoration: none;
     transition: 0.5s;
+    margin-bottom: 100px;
 }
 #confirmar div a:hover{
     font-size: 50px;
@@ -340,5 +424,10 @@ header #back{
     }
     #confirmar div a:hover{
         font-size: 28px;
+    }
+    #nyn #tnyn{
+        width: 400px;
+        font-size: 30px;
+        margin-bottom: 20px
     }
 }
